# better-review

./: .gitignore  Cargo.toml  README.md  app.go  app_test.go  better-review  cli.ts  deno.json  go.mod  i_like_potatoes.md  i_like_potatos.md  install.sh  main.go  main.ts  main_test.ts  mock_opencode  parse.go  parser.ts  parser_test.ts  proxy.go  review.go  review_tui.go  test_interaction.py  test_proxy.py  tui.go
.github/workflows/: ci.yml  release.yml
assets/web/: app.js  index.css  index.html
demo/: better-review.tape  mock-opencode.sh  run-demo.sh
demo/fixture/: Cargo.toml
demo/fixture/src/: lib.rs
src/: app.rs  main.rs  settings.rs  web.rs
src/app/: command_palette.rs  commit_prompt.rs  explain_history.rs  explain_render.rs  explain_request.rs  github_token.rs  keybinding_picker.rs  keybindings.rs  model_picker.rs  publish.rs  review_display.rs  review_keys.rs  review_mutation.rs  review_nav.rs  review_screen.rs  session_picker.rs  settings_panel.rs  text_input.rs  theme.rs
src/domain/: diff.rs  mod.rs  session.rs
src/services/: git.rs  mod.rs  opencode.rs  parser.rs
src/ui/: review.rs  styles.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  dom.ts  main.ts  state.ts  styles.css  types.ts
