[package]
name = "better-review"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
crossterm = { version = "0.29", features = ["event-stream"] }
open = "5.3"
patch = "0.7"
rand = "0.8"
ratatui = "0.30"
ratatui-interact = "0.5"
regex = "1.12"
ratatui-core = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
ratatui-textarea = "0.9"

[dev-dependencies]
tempfile = "3.23"
